--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <main>
     <div class="cartao">
-      <img class="qrcode" src="./images/image-qr-code.png">
+      <img class="qrcode" src="./images/image-qr-code.png" alt="">
       <h1 class='top'>Improve your front-end skills by building projects</h1>
 
       <p class="text"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
